--- a/src/App.css
+++ b/src/App.css
@@ -11,14 +11,20 @@
   background: -webkit-linear-gradient(to left, #6dd5ed, #2193b0);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to left, #6dd5ed, #2193b0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   text-align: center;
+  position: fixed;
   top: 0;
   left: 0;
   height: 100%;
   width: 100%;
 }
 
+.landing-main {
+  margin:-top 5em;
+  width: '100%';
+}
+
 .avatar {
-  padding-top: 1em;
+  margin-top: 8em;
   border-radius: 50%;
   opacity: 0.70;
 }
@@ -70,6 +76,10 @@
 
 /* Contact Page */
 
+.contact-name {
+  margin-top: 6em;
+}
+
 .contact-body {
   margin: auto;
   justify-content: center;
@@ -107,4 +117,12 @@
 .contact-list i {
   font-size: 66px;
   padding-right: 5rem;
+}
+
+/* Resume Page */
+
+.resume-right-col {
+  background: #2193b0;
+  color: white;
+  padding: 2em;
 }
